--- a/README
+++ b/README
@@ -1,1 +1,10 @@
-Floating Notification's theme
+####Life's Request####
+
+![1](http://i.imgur.com/zWNPLLNl.png "life's request")
+
+* BG Color : 70% transparent
+* Bubble Text : Holo blue, hex value: #ff33b5e5
+* Border color : White
+* Rounded corners : Yes
+* Ring : Transparent
+* Font size : Default
