--- a/FN_OrangeBlack/res/values/strings.xml
+++ b/FN_OrangeBlack/res/values/strings.xml
@@ -5,5 +5,6 @@
     <integer name="fontSize">15</integer>
 
     <color name="fontColor">#FFFA6C00</color>
+    <color name="actionColor">#FFFA6C00</color>
 
 </resources>
